[gd_scene load_steps=15 format=3 uid="uid://cps0o1mrwns0y"]

[ext_resource type="Script" path="res://src/UI/main/top.gd" id="1_y8af6"]
[ext_resource type="Script" path="res://src/UI/Popups/ScratchWindow/ScratchWindow.gd" id="2_kj7xx"]
[ext_resource type="Script" path="res://src/UI/Popups/ScratchWindow/ScratchText.gd" id="2_kuxvr"]
[ext_resource type="PackedScene" uid="uid://bjdpdv5kuk7a1" path="res://src/UI/main/Summary/summary.tscn" id="2_vypgq"]
[ext_resource type="PackedScene" uid="uid://b4io5pwywkwt0" path="res://src/UI/Popups/Spellbook/spellbook_popup.tscn" id="4_3p0xb"]
[ext_resource type="PackedScene" uid="uid://f7hu8qg42gq3" path="res://src/UI/Popups/AddPC/add_pc_popup.tscn" id="6_ak5do"]
[ext_resource type="PackedScene" uid="uid://485pr8rsfr3g" path="res://src/UI/Popups/ManagePCs/manage_PCs.tscn" id="7_x60dx"]
[ext_resource type="PackedScene" uid="uid://dc61gy1nh5for" path="res://src/UI/Popups/Help/help.tscn" id="8_qjqv2"]
[ext_resource type="PackedScene" uid="uid://c2c1057aj2807" path="res://src/UI/Popups/AddNPC/add_npc_popup.tscn" id="9_ih87s"]
[ext_resource type="PackedScene" uid="uid://c7wmuko6w27gn" path="res://src/UI/Popups/ManageNPCs/manage_np_cs.tscn" id="10_gaq5r"]
[ext_resource type="PackedScene" uid="uid://ulgjhknvq8vo" path="res://src/UI/Popups/AddNPCToInitative/add_npc_to_initiative.tscn" id="11_27r18"]

[sub_resource type="Animation" id="Animation_r16hr"]
length = 0.001

[sub_resource type="Animation" id="Animation_cptja"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.117647), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_swreb"]
_data = {
"RESET": SubResource("Animation_r16hr"),
"flash": SubResource("Animation_cptja")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_y8af6")

[node name="Summary" parent="." instance=ExtResource("2_vypgq")]
layout_mode = 1

[node name="SaveFlash" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SaveFlash"]
libraries = {
"": SubResource("AnimationLibrary_swreb")
}

[node name="SaveFile" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(644, 600)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.json")

[node name="LoadFile" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 600)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="ScratchWindow" type="Window" parent="."]
handle_input_locally = false
title = "Scratch Window"
position = Vector2i(350, 150)
size = Vector2i(350, 350)
visible = false
popup_window = true
script = ExtResource("2_kj7xx")

[node name="ScratchText" type="TextEdit" parent="ScratchWindow" groups=["Persist"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
placeholder_text = "Scratchpad
This is saved"
wrap_mode = 1
script = ExtResource("2_kuxvr")

[node name="SpellbookPopup" parent="." instance=ExtResource("4_3p0xb")]
visible = false
popup_window = true

[node name="AddPCPopup" parent="." instance=ExtResource("6_ak5do")]
visible = false

[node name="ManagePCs" parent="." instance=ExtResource("7_x60dx")]
visible = false

[node name="Help" parent="." instance=ExtResource("8_qjqv2")]
visible = false

[node name="AddNPCPopup" parent="." instance=ExtResource("9_ih87s")]
visible = false

[node name="ManageNPCs" parent="." instance=ExtResource("10_gaq5r")]
visible = false

[node name="AddNPCToInitiative" parent="." instance=ExtResource("11_27r18")]
visible = false

[connection signal="file_selected" from="SaveFile" to="." method="_on_SaveFile_file_selected"]
[connection signal="file_selected" from="LoadFile" to="." method="_on_LoadFile_file_selected"]
[connection signal="close_requested" from="ScratchWindow" to="ScratchWindow" method="_on_close_requested"]
[connection signal="close_requested" from="SpellbookPopup" to="SpellbookPopup" method="_on_close_requested"]
